--- a/vue/package.json
+++ b/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack",
+  "name": "vue",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "pinia": "^2.1.3",
+    "vee-validate": "^4.9.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
