--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "culqi": "^0.0.2",
     "pinia": "^2.1.3",
     "vee-validate": "^4.9.6",
     "vue": "^3.3.4",
